--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="row">
 
         <div class="col-lg-6">
-          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
+          <h1 class="big-heading"><b>Meet new and interesting dogs nearby.</b></h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
         </div>
@@ -215,7 +215,7 @@
 
     <div class="container-fluid">
 
-      <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
+      <h3 class="big-heading"><b>Find the True Love of Your Dog's Life Today.</b></h3>
       <button class="download-button btn btn-lg btn-dark" type="button"><i class="fab fa-apple"></i> Download</button>
       <button class="download-button btn btn-lg brn-light" type="button"><i class="fab fa-google-play"></i> Download</button>
     </div>
